# picture-of-the-day

./: .gitignore  README.md  api_helper.py  app_logger.py  main.py  pyproject.toml
static/: apod.txt  apod_info.json  apod_title.txt
